<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/s"
        >
        <item
            android:id="@+id/nav_shahada"
            android:icon="@drawable/shahada"
            android:title="@string/menu_shahada" />
        <item
            android:id="@+id/nav_paklik"
            android:icon="@drawable/paklik"
            android:title="@string/menu_paklik" />
        <item
            android:id="@+id/nav_namaz"
            android:icon="@drawable/sujud"
            android:title="@string/menu_namaz" />


        <item
            android:id="@+id/nav_sureler"
            android:icon="@drawable/quran"
            android:title="@string/menu_sureler" />
        <item
            android:id="@+id/nav_dualar"
            android:icon="@drawable/dualar"
            android:title="@string/menu_dualar" />
        <item
            android:id="@+id/nav_40Parz"
            android:icon="@drawable/qiriqpariz"
            android:title="@string/menu_40Parz" />

    </group>

    <group
        android:id="@+id/f"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_About"
            android:icon="@drawable/team"
            android:title="@string/about" />
    </group>
</menu>